[package]
name = "rustral-wgpu-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

description = "Experimental WebGPU compute backend for Rustral (Vulkan/Metal/DX12; see README for platform caveats)"

[lints]
workspace = true

[dependencies]
rustral-core = { path = "../core", version = "0.1.0" }

wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
thiserror = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
